# gst-synchronous-clock-plugin

./: .gitignore  AUTHORS  Makefile.in  README.md  aclocal.m4  configure.ac  libtool
src/: Makefile.am  gstsynchronousclock.c  gstsynchronousclock.h  gstsynchronousclock.pc.in
tests/: Makefile.am  advance-time-test.c  gstsynchronousclocktest.c  gstsynchronousclocktickfortest.c  tick-for-test.c
